alignment fixes

--- a/public/css/prizes.css
+++ b/public/css/prizes.css
@@ -65,7 +65,7 @@
     align-items: center;
     justify-content: center;
     background: #1f2438;
-    padding: 25px 55px 10px;
+    padding: 25px 45px 10px;
     border-radius: 10px;
 }
 .details h2{
@@ -170,9 +170,27 @@
     color: white;
     text-align: center;
     line-height: 1.3;
-    font-size: 15px !important;
+    font-size: 15px;
+    width: 100%;
   }  
-
+  .card-back p{
+    transform: scale(0.95);
+    text-align: left;
+    position: relative;
+  }
+  .card-back p::before{
+    content: '';
+    position: absolute;
+    top: 10px;
+    left: -15px;
+    width: 5px;
+    height: 5px;
+    border-radius: 50%;
+    background: white;
+  }
+  .card-back h4 ul{
+    list-style: none;
+  }
   .show-flexbox{
     display: flex !important;
 }
@@ -227,6 +245,9 @@
   }
   .details h2{
     font-size: 2.5rem;
+    white-space: nowrap;
+  }
+  .details h3{
     white-space: nowrap;
   }
   .sponsered-tracks, .swags-kit{
